# cookiecutter-minimal-pypackage

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: README.md  setup.cfg  tox.ini
