[metadata]
name = {{ cookiecutter.package_name }}
summary = {{ cookiecutter.package_description }}
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
version = {{ cookiecutter.package_version }}

author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
home-page = https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.package_name }}

python-requires = >=3.6

license = Apache-2
license_file = LICENSE

classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
